--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,3 +1,6 @@
-<canvas id="canvas" width="500px" height="500px" class="wheel-spinner">
-  Canvas not supported
-</canvas>
+<div class="wheel-background">
+  <div class="wheel-border"></div>
+  <canvas id="canvas" width="500px" height="500px" class="wheel-spinner">
+    Canvas not supported
+  </canvas>
+</div>
