wheel and main page design fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
 <div class="container">
   <div class="info">
     <h1 class="title">
-      Want to win a free burger?🍔<br>
-      Spin the wheel!🎰
+      Want to win a free burger?&#127828;<br>
+      Spin the wheel!&#127920;
     </h1>
     <app-spinner   [width]="500"
                    [height]="500"
@@ -25,7 +25,7 @@
     ></app-spinner>
     <h3>
       Tell us who you are so we can send <br>
-      you your gift!👇🏻
+      you your gift!&#128071;
     </h3>
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="info-form">
       <input type="text" class="form-input" formControlName="firstName" placeholder="First Name">
