--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,5 +1,7 @@
 <div class="wheel-background">
-  <div class="wheel-border"></div>
+  <div class="wheel-outer-border"></div>
+  <div class="wheel-middle-border"></div>
+  <div class="wheel-inner-border"></div>
   <canvas id="canvas" width="500px" height="500px" class="wheel-spinner">
     Canvas not supported
   </canvas>
